--- a/27.line-chart.html
+++ b/27.line-chart.html
@@ -178,7 +178,7 @@
           .data(data)
           .attr("d", lineChart(data))
           .attr("fill", "none")
-          .attr("stroke", "steelblue")
+          .attr("stroke", "#f68b47")
           .attr("stroke-width", 1.5);
       };
 
