--- a/19.responsive.html
+++ b/19.responsive.html
@@ -13,6 +13,12 @@
     />
     <link rel="stylesheet" href="./extension/prism.css" />
     <link rel="stylesheet" href="./css/utils.css" />
+    <style>
+      @media (max-width: 576px) {
+      }
+      @media (min-width: 577px) {
+      }
+    </style>
   </head>
   <body>
     <nav class="bg-orange navbar">
