--- a/27.line-chart.html
+++ b/27.line-chart.html
@@ -14,8 +14,15 @@
     <link rel="stylesheet" href="./extension/prism.css" />
     <link rel="stylesheet" href="./css/utils.css" />
     <style>
-      .basicLineChart {
-        width: 80%;
+      @media (max-width: 576px) {
+        .basicLineChart {
+          width: 100%;
+        }
+      }
+      @media (min-width: 577px) {
+        .basicLineChart {
+          width: 80%;
+        }
       }
     </style>
   </head>
@@ -90,14 +97,14 @@
         const rwdSvgWidth = parseInt(
             d3.select(".basicLineChart").style("width")
           ),
-          rwdSvgHeight = rwdSvgWidth < 800 ? rwdSvgWidth * 0.6 : 400,
+          rwdSvgHeight = rwdSvgWidth < 600 ? 300 : 400,
           margin = 70,
           bandWidth = 20;
 
         const svg = d3
           .select(".basicLineChart")
           .append("svg")
-          .attr("width", rwdSvgWidth)
+          .attr("width", rwdSvgWidth < 700 ? rwdSvgWidth : 700)
           .attr("height", rwdSvgHeight);
         // .style("border", "1px solid rgb(96, 96, 96)");
 
