--- a/index.html
+++ b/index.html
@@ -324,6 +324,23 @@
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">區域圖</p>
+            <p>Area chart</p>
+            <a href="./29.area-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">多線區域圖</p>
+            <p>multiple area chart</p>
+            <a href="./30.multiple-area-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div
+            class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4"
+          ></div>
         </div>
       </section>
 
@@ -338,42 +355,42 @@
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
             <p class="mb-1">動畫</p>
             <p class="text-center">transition</p>
-            <a href="./29.transition.html" target="_blank">
+            <a href="./31.transition.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">滑鼠事件</p>
             <p class="text-center">Mouse Event</p>
-            <a href="./30.mouse-event.html" target="_blank">
+            <a href="./32.mouse-event.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">縮放</p>
             <p class="text-center">Zoom</p>
-            <a href="./31.zoom.html" target="_blank">
+            <a href="./33.zoom.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">拖曳</p>
             <p class="text-center">Drag</p>
-            <a href="./32.drag.html" target="_blank">
+            <a href="./34.drag.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">原力</p>
             <p class="text-center">Force</p>
-            <a href="./33.force.html" target="_blank">
+            <a href="./35.force.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">刷子</p>
             <p class="text-center">Brush</p>
-            <a href="./34.brush.html" target="_blank">
+            <a href="./36.brush.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
