--- a/test.html
+++ b/test.html
@@ -13,6 +13,18 @@
     />
     <link rel="stylesheet" href="./extension/prism.css" />
     <link rel="stylesheet" href="./css/utils.css" />
+    <style>
+      @media (max-width: 576px) {
+        .wrapper {
+          width: 100%;
+        }
+      }
+      @media (min-width: 577px) {
+        .wrapper {
+          width: 80%;
+        }
+      }
+    </style>
   </head>
   <body>
     <nav class="bg-orange navbar">
@@ -25,7 +37,8 @@
         </a>
       </div>
     </nav>
-
+    <!-- SVG -->
+    <div class="mt-5 wrapper"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -35,7 +48,56 @@
     <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script>
-      
+      const rwdSvgWidth = 500,
+        rwdSvgHeight = 300,
+        margin = 40;
+
+      // chart SVG
+      const svg = d3
+        .select(".wrapper")
+        .append("svg")
+        .attr("width", rwdSvgWidth)
+        .attr("height", rwdSvgHeight)
+        .style("border", "1px solid rgb(96, 96, 96)");
+
+      // 設定x、y軸比例尺
+      const xScale = d3.scaleLinear().domain([0, 100]).range([0, 300]);
+      const yScale = d3.scaleLinear().domain([0, 100]).range([220, 0]);
+
+      // 建立x、y軸線
+      let xAxis = d3
+        .axisBottom(xScale)
+        .tickSizeInner(-rwdSvgHeight + margin)
+        .tickSizeOuter(0)
+        .tickPadding(15);
+
+      let yAxis = d3
+        .axisLeft(yScale)
+        .tickSizeInner(-(rwdSvgHeight + margin))
+        .tickSizeOuter(0)
+        .tickPadding(15);
+
+      // x軸線綁訂到DOM
+      svg
+        .append("g")
+        .attr("class", "xAxis")
+        .call(xAxis)
+        .attr(
+          "transform",
+          `translate(${margin * 3}, ${rwdSvgHeight - margin})`
+        );
+
+      // y軸線綁訂到DOM
+      svg
+        .append("g")
+        .attr("class", "yAxis")
+        .attr("transform", `translate(${margin * 3}, ${margin})`)
+        .style("strock", "red")
+        .call(yAxis);
+
+      // 調整tick特殊樣式
+      d3.selectAll(".yAxis line").attr("transform", "translate(-10,0)");
+      d3.selectAll(".xAxis line").attr("transform", "translate(0,10)");
     </script>
   </body>
 </html>
