--- a/17.interpolate.html
+++ b/17.interpolate.html
@@ -29,13 +29,28 @@
     <div class="container">
       <h3 class="mt-6 fw-bold">插補值 Interpolate</h3>
 
+      <!-- interploateNumber -->
       <div>
-        <h5 class="mt-4"><mark>d3.scale( )</mark></h5>
-        <svg class="mt-4 stack" style="border: 1px solid rgb(96, 96, 96)"></svg>
-
+        <h5 class="mt-4"><mark>d3.interploateNumber( )</mark></h5>
         <p class="mt-2 mb-1 fs-6">程式碼</p>
         <pre>
           <code class="language-js line-numbers remove-initial-line-feed">
+            const interpolateNumber = d3.interpolateNumber(1, 10);
+            interpolateNumber(0); // 1
+            interpolateNumber(0.5); // 5.5
+            interpolateNumber(1); // 10
+          </code>
+        </pre>
+      </div>
+
+      <!-- interploateRound -->
+      <div>
+        <h5 class="mt-4"><mark>d3.interploateRound( )</mark></h5>
+        <p class="mt-2 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+            const interpolateRound = d3.interpolateRound(1, 10);
+            interpolateRound(0.5); // 6
           </code>
         </pre>
       </div>
@@ -47,6 +62,18 @@
     ></script>
     <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script></script>
+    <script>
+
+    const interpolateNumber = d3.interpolateNumber(1, 10);
+    interpolateNumber(0); // 1
+    interpolateNumber(0.5); // 5.5
+    interpolateNumber(1.0); // 10
+
+    const interpolateRound = d3.interpolateRound(1, 10);
+    interpolateRound(0.5); // 6
+
+    const interpolateRgb = d3.interpolateRgb("red", "blue");
+    interpolateRgb(0.5); //rgb(128, 0, 128);
+    </script>
   </body>
 </html>
