--- a/15.scale.html
+++ b/15.scale.html
@@ -303,12 +303,21 @@
                 <!-- d3.scalePoint -->
                 <div>
                   <p class="mt-4 text-danger fw-bold">d3.scalePoint</p>
-                  <svg style="border: 1px solid rgb(96, 96, 96)"></svg>
   
                   <p class="mt-2 mb-1 fs-6">程式碼</p>
                   <pre>
                     <code class="language-js line-numbers remove-initial-line-feed">
-                      // JS
+                      // point scale
+                      const pointScale = d3.scalePoint()
+                                        .domain(['狗', '貓', '天竺鼠', '烏龜', '海豚'])
+                                        .range([0, 200])
+                                        .padding(3)
+                      
+                      pointScale.step();  // return 50
+                
+                      pointScale('狗');  // returns 0
+                      pointScale('貓');  // returns 50
+                      pointScale('海豚');  // returns 200
                     </code>
                   </pre>
                 </div>
@@ -431,6 +440,15 @@
       bandScale('狗'); // returns 0
       bandScale('貓'); // returns 40
       bandScale('海豚'); // returns 160
+
+      // band Point
+      const pointScale = d3.scalePoint()
+                           .domain(['狗', '貓', '天竺鼠', '烏龜', '海豚'])
+                           .range([0, 200]);
+
+      pointScale('狗');  // returns 0
+      pointScale('貓');  // returns 50
+      pointScale('海豚');  // returns 200
     </script>
   </body>
 </html>
