--- a/16.axes.html
+++ b/16.axes.html
@@ -26,7 +26,7 @@
       </div>
     </nav>
 
-    < class="container">
+    <div class="container">
       <h3 class="mt-6 fw-bold">軸線、刻度、工具提示框</h3>
 
       <!-- Axes -->
@@ -1569,10 +1569,9 @@
 
       // clock axis
       const drawClockAxis = ()=>{
-
         const currentWidth = parseInt(d3.select(".clockAxis").style("width"));
-        const clockRadius = currentWidth/2;
-        const height = 400;
+        const clockRadius = currentWidth/3;
+        const height = 500;
         const margin = 30;
 
         const svg = d3.select(".clockAxis")
@@ -1581,24 +1580,28 @@
                       .attr("height", height);
 
         // 小時比例尺
-        const hourScale =d3.scaleLinear().domain([0,12]).range([0,360])
+        const hourScale = d3.scaleLinear().domain([0,12]).range([0,360])
 
         // 分鐘比例尺
         const minuteScale =d3.scaleLinear().domain([0,60]).range([0,360])
 
         const clock = svg.append("g").attr('id', 'clock')
+        .attr("transform", `translate(${[parseInt(currentWidth / 2), height / 2]})`)
 
+
+        // 分鐘刻度
         clock.selectAll('line')
             .data(d3.range(0,60))
-            .join()
+            .enter()
             .append('line')
             .attr('class', 'secondTicks')
             .attr('x1', '0')
             .attr('x2', '0')
             .attr('y1', clockRadius)
             .attr('y2', clockRadius-10)
-            // .attr('', '')
-            // .attr('', '')
+            .attr('stroke-width', '3')
+            .attr('stroke', 'black')
+            .attr("transform", d => `rotate(${minuteScale(d)})`);
         
 
       }
